src/App.scss
@font-face {
  font-family: "Route159";
  src: url("/route159/Route159-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Route159";
  src: url("/route159/Route159-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
}

body {
  height: 100vh;
  margin: 0;
  box-sizing: border-box;
  font-size: 14px;
  background-color: #050b18;
  color: white;
}

body, input, button {
  font-family: "Route159", sans-serif;
}

#root {
  box-sizing: border-box;
  height: 100vh;
  padding: 1em;
  gap: 1em;
}

::selection {
  color: black;
  background: #b7cefd;
}

h2 {
  font-weight: bold;
}

h2, p, pre {
  margin: 0;
}

a {
   color: #87adfa;

   &:hover {
     color: #b7cefd;
   }
}

.search-mode {
  color: white;
  border: none;
  background: none;
  padding: 5px 8px;

  &.selected {
    background: #b7cefd;
    color: black;
  }

  &:not(.selected):hover {
    text-decoration: underline;
  }
}

.panel {
  padding: 1em;
  border: 1px solid white;
  box-sizing: border-box;

  &-dual-view {
    overflow: hidden;
  }

  &-tags {
    display: flex;
    flex-flow: column;
    font-size: 12px;
    overflow-x: hidden;
    overflow-y: scroll;
    scrollbar-color: #b7cefd #050b18;
    gap: .5em;

    .tag-item {
      display: flex;
      gap: 2em;
      justify-content: space-between;
      align-items: center;
      padding: 5px 8px;
      user-select: none;
      height: min-content;

      &:not(.active):hover > .tag-item-name {
        text-decoration: underline;
      }

      &.active {
        background-color: #b7cefd;
        color: black;
      }

      &-name {
        text-wrap: nowrap;
      }
    }
  }

  &-left, &-right {
    width: 100%;
    display: flex;
    flex-direction: column;
    overflow: clip;
  }

  &-left {
    flex: 1;
  }

  &-right {
    max-width: 50vw;
    padding: 0;
    padding-block: 1em;
  }

  &-left-top {
    display: flex;
    align-items: center;
    gap: 1em;

    label {
      text-wrap: nowrap;
      font-weight: bold;
    }

    input {
      color: white;
      flex: 1;
      padding: 4px;
      background: none;
      border: none;
      border-bottom: 1px dashed white;

      &:focus {
        outline: none;
      }
    }
  }

  &-left-bottom {
    display: flex;
    flex-direction: column;
    gap: 1em;
    flex: 1;
    padding: 0;
    padding-block: 1em;
    overflow: hidden;

    & > .panel-vsplit, > .build-entries {
      scrollbar-color: #b7cefd #050b18;
      padding-inline: 1em;
    }
  }

  &-hsplit {
    box-sizing: border-box;
    flex-direction: column;
    overflow: hidden;
  }

  &-hsplit, &-dual-view, &-left, &-right {
    height: 100%;
    display: flex;
    gap: 1em;
  }

  &-vsplit {
    display: flex;
    justify-content: space-between;
    flex-flow: wrap;
    font-size: 12px;
    gap: .5em;
  }
}

.mode-type {
  display: flex;
  gap: 1ch;
  align-items: center;
}

.build-entry {
  inset-inline: 1em !important;
  width: inherit !important;

  padding: 5px 8px;
  font-size: 14px;

  width: inherit;
  height: inherit;

  display: flex;
  align-items: center;
  gap: 1ch;

  background: none;
  border: none;
  color: inherit;

  &.current {
    background: #b7cefd;
    color: black;
  }

  &:not(.current):hover span.attrpath {
    text-decoration: underline;
  }

  span.attrpath {
    text-align: left;
    text-overflow: ellipsis;
    overflow: hidden;
    text-wrap: nowrap;
  }

  & > span:nth-child(2) {
    color: grey;
  }
}

@media (max-width: 1240px) {
  .panel {
    &-dual-view {
      flex-direction: column;
    }

    &-left {
      min-height: 0;
    }

    &-right {
      flex: 1;
      max-height: 33vh;
      max-width: 100%;
    }

    &-tags {
      max-height: 15vh;
      overflow-x: clip;
      overflow-y: scroll;
    }
  }
}

.loading {
  display: flex;
  align-items: center;
  gap: 1em;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.spinning-nix {
  animation: spin 4s linear infinite;
}

.info {
  display: flex;
  align-items: center;
  gap: .5em;
}

.btn {
  margin: 2px;
  box-sizing: content-box;
  border: 1px solid transparent;
  padding: 5px 8px;
  background: #b7cefd;
  color: black;

  &:hover {
    background: none;
    color: #b7cefd;
    border: 1px solid #b7cefd;

  }
}

.separator {
  width: 100%;
  border-top: 1px solid white;
}

.log-viewer {
  padding-inline: 1em;
  scrollbar-color: #b7cefd #050b18;
  font-family: "Jetbrains Mono", monospace;
  word-break: break-all;
  text-wrap: wrap;
  overflow-y: scroll;
  font-size: 12px;
  height: 100%;

  & > span {
    inset-inline: 1em !important;
    width: inherit !important;
  }
}

.log-meta {
  display: flex;
  flex-direction: column;
  padding-inline: 1em;
  gap: 1em;
}

.log-actions {
  display: flex;
  align-items: center;
  padding-inline: 1em;
  gap: 1em;
}

.log-line {
  padding: 0 4px;
  box-sizing: border-box;
  line-height: 18px;

  &.error::before {
    content: '';
    inset: -2px 2px;
    position: absolute;
    z-index: -1;
    background: #592a2e;
    overflow: visible !important;
  }
}

